    + Added new config option to show custom fields separated from standard fields when editing IP address;
    + Added Required fields subpage to define IP address fields that must be filled in;
    + Performance + bug fixes (#1660, #1657);
    + MasterSubnet dropdown list is dynamically generated via AJAX call;
    + API:
        + New last_subnet API calls (#1655);

    Translations:
    ----------------------------
    + German translation updated to verson 1.3.1;

    Bugfixes:
    ----------------------------
    + Fixed uncaught error if vlan number exceeds max permitted (#1455);
    + Fixed Illegal string offset 'dns_name' in pingCheck.php errors (#1461);
    + Performance fix for subnet_dropdown_print_available (#1562);
    + Fixed logo updater for apache v2.4 (#1582);
    + Fixed section names containing spaces are not included in exports (#1566);
    + Allow DNS wildcard records (#1571);
    + Fixed slow mac address vendor decoding for subnet detail view (#1658);
    + Performance fix for detecting overlapping subnets. (#1052, #1426, #1533);
    + Performance fix for slow mac address vendor decoding (#1658);
    + Performance fix for subnet API first_subnet & all_subnets calls;
    + Convert to UTF-8 encoding on import/export to preserve dialectics (#1659, #1700, #1728);
    + Importing IPs loose Mac Addresses (#1607);
    + Section names containing spaces are not included in exports. (#1566);
    + Bug with section and dashboard (#1593);
    + Fixed improper contents in plain text part of notification e-mails (#1707);
    + Reduce size of email notifications (#1643);
    + PHP 5.3 compatibility fixes (#1594, #1730);
    + PHP 7.2 compatibility fixes (#1683, #1714);
    + Fixed notification e-mails contain a broken link. (#1708);
    + Code injection in Name field. (#1667);
    + Reflected XSS requiring user interaction on search. (#1705);
    + Misc IPv6 fixes;

== 1.3.1

    New features:
    ------------