@@ -909,3 +909,6 @@ ALTER TABLE `requests` CHANGE `dns_name` `hostname` VARCHAR(255)  CHARACTER SET 
 ALTER TABLE `subnets` ADD INDEX (`masterSubnetId`);
 ALTER TABLE `subnets` ADD INDEX (`sectionId`);
 ALTER TABLE `subnets` ADD INDEX (`vrfId`);
+
+/* bandwidth calculator widget */
+INSERT INTO `widgets` (`wid`, `wtitle`, `wdescription`, `wfile`, `wparams`, `whref`, `wsize`, `wadminonly`, `wactive`) VALUES (NULL, 'Bandwidth calculator', 'Calculate bandwidth', 'bw_calculator', NULL, 'no', '6', 'no', 'yes');
